--- a/Basic.ipynb
+++ b/Basic.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Basic.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM76PybZV21U9j4m9bloGfl",
+      "authorship_tag": "ABX9TyMIa+shGi582rJMN6vQiYo2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,14 +25,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7E70x6oC5WhQ"
+      },
+      "source": [
+        "# Data Cleaning"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "1ZvZK9VA49Fy"
       },
       "source": [
-        ""
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import matplotlib as mpt\n",
+        "import seaborn as sns\n",
+        "import scipy.stats as st\n",
+        "import scipy as sc"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     }
   ]
