--- a/basic.ipynb
+++ b/basic.ipynb
@@ -5,7 +5,10 @@
     "colab": {
       "name": "basic.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPbjZ8YUYoOi2PLCCBos/Wl",
+      "collapsed_sections": [
+        "9IlLs3tfX4HZ"
+      ],
+      "authorship_tag": "ABX9TyNZmJmOwwIa51PEcGx+SLbF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,6 +48,35 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vwICB4LALr66",
+        "outputId": "b4a91dd0-b5b8-44d9-8783-70d21afb5f3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "np."
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.718281828459045"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -127,7 +159,7 @@
         "id": "bYAOlg7tmfru"
       },
       "source": [
-        "Filter and Sort"
+        "Filter and Select"
       ]
     },
     {
@@ -178,7 +210,7 @@
         "id": "31ejR23AmbBE"
       },
       "source": [
-        "def newfunction(x,y): print((x+y)*x*y)\n",
+        "def newfunction(x,y)  :print((x+y)*x*y)\n",
         "newfunction(5,6)"
       ],
       "execution_count": null,
@@ -199,7 +231,7 @@
         "id": "S60OGg5pmc_M"
       },
       "source": [
-        "newfunc1= lambda x,y: (x+y)*x*y\n",
+        "newfunc1= lambda x,y  :(x+y)*x*y\n",
         "newfunc1(5,6)"
       ],
       "execution_count": null,
@@ -220,7 +252,7 @@
         "id": "_nnLzqv0nALy"
       },
       "source": [
-        "for i in range(20,100,5): print(i)"
+        "for i in range(20,100,5)  :print(i)"
       ],
       "execution_count": null,
       "outputs": []
@@ -351,6 +383,56 @@
       "source": [
         "import sklearn as sk\n",
         "import sklearn.metrics"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zXSamh6aihrT"
+      },
+      "source": [
+        "Range of Integers and Floats and For Loop Storage\n",
+        "\n",
+        "\n",
+        "*   Important : More focus needed\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sm77h8Q6iuwA"
+      },
+      "source": [
+        "#Float\n",
+        "a=[]\n",
+        "for i in np.arange(0,5,.001):\n",
+        "    a.append(i)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wehqlMUii2nr"
+      },
+      "source": [
+        "data = []\n",
+        "for i in range(5):\n",
+        "    data.append(i * i)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cTDjoxmNjDQK"
+      },
+      "source": [
+        "s.norm.pdf(np.arange(1,5,.1))"
       ],
       "execution_count": null,
       "outputs": []
