--- a/basic.ipynb
+++ b/basic.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "9IlLs3tfX4HZ"
       ],
-      "authorship_tag": "ABX9TyNZmJmOwwIa51PEcGx+SLbF",
+      "authorship_tag": "ABX9TyPEzmP8gsv2IbvIMAfhXSkH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
         "import seaborn as sns\n",
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -500,6 +500,61 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_UFCtFdwm2B1"
+      },
+      "source": [
+        "# Finance"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4Bgyq7zWm-uy"
+      },
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2-VwrUUYnOK5"
+      },
+      "source": [
+        "EMI computation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8xGxJgdLnDbi"
+      },
+      "source": [
+        "Fin=pd.DataFrame({'Principle':np.ppmt(.01,range(0,12),12,-12000,0,\"end\"),\n",
+        "                  \"Int\":np.ipmt(.01,range(0,12),12,-12000,0,\"end\")})\n",
+        "Fin"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jtD6mEUmnIM7"
+      },
+      "source": [
+        "Fin['Payment']=Fin[\"Principle\"]+Fin[\"Int\"]\n",
+        "Fin"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
